[package]
name = "dendrite_auth"
version = "0.1.0"
authors = ["Jeroen van Maanen"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0"
dendrite = "0.3.1" # { path = "../rustic-dendrite" } #
dendrite_macros = "0.1.0" # { path = "../rustic-dendrite-macros" } #
jwt = "^0.13"
lazy_static = "^1.4"
log = "^0.4"
pem = "^0.8"
prost = "^0.7"
rand_core = "^0.5"
rsa = "^0.3"
serde_json = "~1"
sha2 = "0.9.2"
sshkeys = "^0.3"
tonic = "^0.4"

[build-dependencies]
tonic-build = "^0.4"
